# homelab

./: .gitignore  .mcp.json  .sops.yaml  404.html  CLAUDE.md  CNAME  LICENSE  Makefile  README.md  Taskfile.yaml  index.html  k3s.tf  mkdocs.yml  renovate.json
ansible/: .ansible-lint  .yamllint  Makefile  all.yml  ansible.cfg  hosts.ini  kubeconfig  requirements.yml
ansible-runner/: Dockerfile  docker-compose.yaml
ansible/playbooks/apps/frigate/files/: Dockerfile  generate_model.py  pyproject.toml
ansible_backup/: README.md  kubeconfig  reset.yml
ansible_backup_20250519124335/: Makefile
deploy/: controlplane.sh
docs/: index.md
kubernetes/: .gitignore  README.md
packer/: .gitignore  Makefile  build-templates.sh  credentials.pkrvars.hcl  init-plugins.sh  minimal.pkr.hcl  test.pkr.hcl
scripts/: controlplane.sh
search/: search_index.json
terraform/: .gitignore  Makefile  main.tf  outputs.tf  (+3 more)
tui/: .dockerignore  Dockerfile  PROMPT.md  compose.yml  pyproject.toml  run.sh
tui/src/homelab_tui/: app.py  config.py
tui/src/homelab_tui/css/: app.tcss
tui/src/homelab_tui/data/: discovery.py  environment.py  hcl_parser.py  inventory_parser.py  models.py  tfstate_reader.py
tui/src/homelab_tui/screens/: ansible_deploy.py  ca.py  command_output.py  confirm_dialog.py  dashboard.py  dns.py  docker_view.py  ntp.py  output.py  packer.py  tasks.py  terraform.py  vm_edit_modal.py  vm_management.py
tui/src/homelab_tui/task_runner/: registry.py  runner.py
tui/src/homelab_tui/widgets/: confirm_dialog.py  env_selector.py  task_input_modal.py  vm_edit_modal.py
(+791 files in other folders)
