[project]
name = "homelab-tui"
version = "0.1.0"
description = "Terminal UI for homelab infrastructure management"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.89.0",
    "python-hcl2>=4.3.0",
]

[project.scripts]
homelab-tui = "homelab_tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/homelab_tui"]
